<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="720dp"
    android:background="@drawable/bg_blue"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="989dp"
        android:layout_height="464dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="122dp"
        android:background="@drawable/about_bg"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="27dp"
            android:text="@string/about_title"
            android:textColor="#ffffff"
            android:textSize="35sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="71dp"
            android:layout_marginRight="71dp"
            android:layout_marginTop="25dp"
            android:lineSpacingExtra="10dp"
            android:text="@string/about_us"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/version_flag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="71dp"
            android:layout_marginRight="71dp"
            android:layout_marginTop="8dp"
            android:minHeight="11dp"
            android:singleLine="true"
            android:textColor="#ff0000"
            android:textSize="20sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/software_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="71dp"
            android:layout_marginRight="71dp"
            android:layout_marginTop="8dp"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/version_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="71dp"
            android:layout_marginRight="71dp"
            android:layout_marginTop="8dp"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="71dp"
            android:layout_marginRight="71dp"
            android:layout_marginTop="8dp"
            android:text="@string/about_email"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="71dp"
            android:layout_marginRight="71dp"
            android:layout_marginTop="8dp"
            android:text="@string/about_qq_group"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="71dp"
            android:layout_marginRight="71dp"
            android:layout_marginTop="8dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/about_qq"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/about_company"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>